# observers-backend-django

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  heroku.yml  pyproject.toml
api/: apps.py  urls.py
api/authentication/: permissions.py  serializers.py  urls.py  views.py
api/forum/: filters.py  permissions.py  serializers.py  urls.py  utils.py  views.py
api/news/: permissions.py  urls.py  views.py
authentication/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_notification.py
chat/: apps.py  consumers.py  middleware.py
common/: exceptions.py  mixins.py  pagination.py  permissions.py
config/: asgi.py  settings.py  urls.py
forum/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_alter_comment_question.py  0003_delete_notification.py
news/: apps.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_article_options.py
