[tool.poetry]
name = "observers-backend-django"
version = "0.1.0"
description = "Backend API for observers.gipss.tech written with Django and DRF"
authors = ["Gipss <gissa.dmtr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
environs = {extras = ["django"], version = "^9.5.0"}
djangorestframework-simplejwt = "^5.2.0"
django-debug-toolbar = "^3.5.0"
django-filter = "^22.1"
channels = "^3.0.5"
django-cors-headers = "^3.13.0"
channels-redis = "^3.4.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
autoflake = "^1.4"
yesqa = "^1.4.0"
pre-commit = "^2.20.0"
black = {extras = ["d"], version = "^22.6.0"}


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = [".",]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
